<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_salary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fe7f5940"

    tools:context="com.example.robertkaczmarek.drogi_bhp.bhp">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/widthMaterial"
        android:hint="@string/width"
        android:layout_marginTop="2dp"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:backgroundTint="#feffff00"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info1"
        android:id="@+id/info1"
        android:layout_below="@+id/widthMaterial"
        android:layout_marginTop="5dp"
        android:textColor="#feffff00"
        android:textSize="17dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vehicles"
        android:layout_below="@+id/info1"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1"
            android:text="@string/ped1"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2"
            android:text="@string/ped2"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motorNO1"
            android:text="@string/noMotor1"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motorNo2"
            android:text="@string/noMotor2"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motorNo1P"
            android:text="@string/noMotor3"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motorNo2P"
            android:text="@string/noMotor4"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motor1"
            android:text="@string/vehicles1"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motor2"
            android:text="@string/vehicles2"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motor1P"
            android:text="@string/vehicles3"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motor2P"
            android:text="@string/vehicles4"
            android:onClick="CountRoad"
            android:buttonTint="#feffff00"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/count"
        android:layout_below="@+id/vehicles"
        android:onClick="counWidthRoad"
        android:background="#feffff00"
        android:text="@string/count"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/count"
        android:layout_alignBottom="@id/count"
        android:layout_alignTop="@+id/count"
        android:text="@string/clear"
        android:onClick="Clear"
        android:background="#feffff00"/>

</RelativeLayout>
